force-app/main/default/objects/TWIST_Tealium_Settings__c/TWIST_Tealium_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>TWIST Tealium Settings</label>
</CustomObject>