force-app/main/default/objects/TWIST_Tealium_Settings__c/fields/Environment_Id__c.field-meta.xml
<CustomField>
    <fullName>Environment_Id__c</fullName>
    <label>Environment Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>