force-app/main/default/objects/TWIST_Tealium_Settings__c/fields/Environment_Tealium__c.field-meta.xml
<CustomField>
    <fullName>Environment_Tealium__c</fullName>
    <label>Environment Tealium</label>
    <length>10</length>
    <type>Text</type>
</CustomField>