force-app/main/default/objects/TWIST_Tealium_Settings__c/fields/Environment_Type__c.field-meta.xml
<CustomField>
    <fullName>Environment_Type__c</fullName>
    <label>Environment Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>