force-app/main/default/objects/TWIST_Tealium_Settings__c/fields/Page_Type__c.field-meta.xml
<CustomField>
    <fullName>Page_Type__c</fullName>
    <label>Page Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>